--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "fundraiser-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
